<resources>
    <string name="app_name">MyProjects</string>
    <string name="language">Deutsch</string>
    <string name="hello_world">Sprache einstellen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tasks_by_status">TasksByStatus</string>
    <string name="tab_text_1">Backlog</string>
    <string name="tab_text_2">In Bearbeitung</string>
    <string name="tab_text_3">Abgeschlossen</string>
    <string name="hello_blank_fragment">Leeres fragment</string>

    <!-- Willkommensbildschirm WelcomeActivity -->
    <string name="sign_in">Einloggen</string>
    <string name="sign_up">Registrieren</string>
    <string name="intro_text">Verwalte, plane und tracke deine persönlichen Projekte oder deines Teams</string>
    <string name="welcome_text">Willkommen bei</string>
    <string name="are_you_new">Bist du neu hier?</string>
    <!-- Registrierung RegisterActivity -->
    <string name="sign_up_description">Bitte gib deinen Namen, deine Email-Adresse und dein Passwort ein</string>
    <string name="name">Name</string>
    <string name="password">Passwort</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="email">Email-Adresse</string>
    <!-- Anmeldung MainActivity -->
    <string name="sign_in_description">Bitte gib deine Email-Adresse und dein Passwort ein</string>
    <string name="login_register_text">Noch keinen Account?</string>
    <string name="register_button_text">Jetzt registrieren</string>
    <string name="forgot_password">Passwort vergessen</string>
    <!-- Ladedialog -->
    <string name="please_wait">Bitte warten...</string>
    <!-- App Drawer -->
    <string name="nav_my_profile">Mein Profil</string>
    <string name="nav_logout">Ausloggen</string>
    <!-- Profilseite -->
    <string name="update">Aktualisieren</string>
    <!-- Projekt erstellen seite -->
    <string name="project_name">Projektname</string>
    <string name="project_status">Projektstatus</string>
    <string name="create_project_title">Projekt erstellen</string>
    <string name="create">ERSTELLEN</string>
    <string name="project_start">Projektstart</string>
    <string name="project_end">Projektende</string>
    <string name="create_project_button">Projekt hinzufügen</string>
    <!-- Projektübersicht -->
    <string name="no_projects">Du hast bisher keine Projekte angelegt. Füge dein erstes Projekt hinzu!</string>
    <!-- Aufgabenliste -->
    <string name="no_tasks">Du hast in diesem Bereich noch keine Aufgaben</string>
    <string name="backlog">Backlog</string>
    <string name="in_progress">In Arbeit</string>
    <string name="done">Fertig</string>
    <string name="delete_project">Projekt löschen</string>
    <string name="edit_project">Projekt bearbeiten</string>
    <!-- Aufgabe erstellen Activity -->
    <string name="task_name">Aufgabenname</string>
    <string name="task_priority">Priorität</string>
    <string name="task_status">Status</string>
    <string name="task_description">Aufgabenbeschreibung</string>
    <string name="create_task">Aufgabe erstellen</string>
    <string name="delete_task">Aufgabe löschen</string>
    <!-- Projektmitglieder Activity -->
    <string name="members">Projektmitglieder</string>
    <string name="add_member">Mitglied hinzufügen</string>
    <!-- Miglieder hinzufügen Activity -->
    <string name="search_member">Mitglied suchen</string>
    <string name="cancel">Abbrechen</string>
</resources>