<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProject">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyProjects.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addProjectToolbar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="?colorPrimary"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/Theme.MyProjects.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">


                <Button
                    android:id="@+id/pickColorButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="+"
                    app:cornerRadius="250dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Farbe auswählen"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text_color"
                    android:textAlignment="center" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/projectNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/project_name"
                        android:inputType="text"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:hint="@string/project_status">

                    <AutoCompleteTextView
                        android:id="@+id/projectStatusText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectTagEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="Tag setzen"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:layout_gravity="start"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/projectStartEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/project_start"
                            android:inputType="text"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/projectEndEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/project_end"
                            android:inputType="text"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/createProjectButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:background="@drawable/shape_button_rounded"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/create_project_button"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>