<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyProjects.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profileToolbar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="?colorPrimary"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/Theme.MyProjects.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="contentDescription"
                    android:src="@drawable/ic_user_place_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <!-- E-Mail Textfeld nicht fokussierbar, weil dieses nicht geändert werden kann/darf-->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>